# wojtek-rz.github.io

./: .gitignore  404.html  README.md  _config.yml  index.html  index.xml  sitemap.xml
.github/workflows/: deploy.yml
_pages/: about.md
_posts/asm-target/: 2024-03-01-readable-assembly.md  deas.out
_posts/copy_elision/: 2024-09-13-copy-elision.md  main.cpp  quiz.md
_posts/haskell/: 2024-03-30-monad-reader.md  examples.hs
_posts/haskell-to-wasm/: 2024-08-12-haskell-in-browser.md
_posts/numpy/: 2024-10-12-meshgrid.md  _2024-10-12-meshgrid.ipynb
archives/: index.html
categories/: index.html  index.xml
categories/example-category/: index.html  index.xml
categories/experiments/: index.html  index.xml
categories/tutorials/: index.html  index.xml
config/_default/: _languages.toml  config.toml  menu.toml  params.toml
links/: index.html
p/dive-into-your-assembly-code/: CMakeLists.txt  deassembled_test_dbg.out  index.html  main.cpp
p/from-code-to-execution-running-haskell-programs-on-the-web/: index.html  index.ts
p/global-variables-in-haskell-with-monadreader/: index.html
p/numpy-explained-meshgrid-function/: index.html
p/one-word-on-copy-constructors/: index.html  main.cpp
page/: index.html  index.xml
page/1/: index.html
post/: index.html  index.xml
scss/: style.min.2eb51b5cb500d6ffa39a5cc4303f6a57d40117e2a520061289a834c815b9b01f.css
search/: index.html  index.json
tags/: index.html  index.xml
tags/assembler/: index.html  index.xml
tags/c++/: index.html  index.xml
tags/cmake/: index.html  index.xml
tags/compilation/: index.xml  (+1 more)
(+75 files in other folders)
